# Asimov_Agno_Create_Agent

./: .env.example  0.llm_call.py  1.1.researcher.py  1.2.analista.py  1.3.own_tools.py  1_3_own_tools.py  21_pdf_agent.py  31_memory.py  README.md  main.py  pyproject.toml
tmp/: agent.db
